# qnodes

./: .gitignore  .gitmodules  CMakeLists.txt
demo/: CMakeLists.txt
demo/src/: demo_nodes.cpp  demo_nodes.hpp  main.cpp  main_window.cpp  main_window.hpp
lib/: CMakeLists.txt
lib/include/qnodes/: bezier.hpp  connection.hpp  node.hpp  slot.hpp
lib/src/: bezier.cpp  connection.cpp  node.cpp  slot.cpp
